# nvr_demo

./: .gitignore
lib/: sdkTest
nvr_demo/: CMakeLists.txt  build.sh  main.cpp
nvr_demo/src/: CapPicture.cpp  CapPicture.h  public.h
src/: CapPicture.cpp  CapPicture.h
